# Anchor-Voice

./: .env.example  .gitignore  .tmp_backend.err  .tmp_frontend.err  .tmp_frontend.out  README_FSS_CRAWLER.md  app_config.py  main.py  pyproject.toml  requirements.txt  requirements_stt_example.txt  service_idea.md  service_plan.md  stt_tts_test.ipynb  test_face_api.py  test_mediapipe.py  test_risk.py  test_sequence.py  test_verify.py  workflow.md
.nemo_diarization/(1)_고객님께_배정된_법무사님께_98만원_송금_부탁드립니다/: input_manifest.json
.nemo_diarization/(2)_법무사_전산만_확인만_되면_자금_수령_가능하십니다/: input_manifest.json
.nemo_diarization/(3)_송금_시간이_늦어져서_예약_송금_건으로_자금_송금하도록_하겠습니다/: input_manifest.json
.streamlit/: config.toml
ai/: __init__.py  action_challenge.py  anchor_prompts.py  cdd_scorer.py  deepface_auth.py  gtts_tts.py  llm_engine.py  teammate_llm_adapter.py  whisper_stt.py
ai/prompts/: teammate_system_instruction.txt
backend/: __init__.py  config.py  main.py  router.py  schemas.py  stealth_sos.py
frontend/: __init__.py  api_config.py  app.py  state_manager.py
frontend/components/: audio_helpers.py  auth_fallback_ui.py  bank_utils.py  face_ui.py  home_ui.py  notice_board_ui.py  result_ui.py  simulator_ui.py  stealth_ui.py  transfer_ui.py  voice_ui.py  (+1 more)
scripts/: build_fss_seed_keywords.py  fss_audio_crawler.py  stt_batch_pipeline.py
stt_output/: fss_seed_dataset.jsonl  fss_seed_keywords.json
tests/: __init__.py  test_cdd.py  test_dynamic_voice_questions.py  test_face_verify_strict.py  test_llm.py  test_voice_frontend_guard.py  test_voice_gate.py  test_voice_router_hardstop.py
(+5 files in other folders)
